@@ -90,7 +90,6 @@ if (providers.systemProperty('idea.active').getOrNull() == 'true') {
     description = 'Builds artifacts needed as dependency for IDE modules'
     dependsOn ':client:rest-high-level:shadowJar',
       ':plugins:repository-hdfs:hadoop-client-api:shadowJar',
-      ':modules:repository-azure:azure-storage-blob:shadowJar',
       ':libs:elasticsearch-x-content:generateProviderImpl'
   }
 
@@ -123,6 +122,7 @@ if (providers.systemProperty('idea.active').getOrNull() == 'true') {
           defaults(JUnit) {
             vmParameters = [
               '-ea',
+              '-Djava.security.manager=allow',
               '-Djava.locale.providers=SPI,COMPAT',
               // TODO: only open these for mockito when it is modularized
               '--add-opens=java.base/java.security.cert=ALL-UNNAMED',
